# liquidfun_wrapper

./: .gitignore  CMakeLists.txt  README.md
include/: LiquidFunAPI.cpp  LiquidFunAPI.h
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  LiquidFunEngine.cpp  LiquidFunEngine.h
src/engine/widgets/: BaseWidget.cpp  BaseWidget.h  CircleWidget.cpp  CircleWidget.h
src/utils/: Utils.cpp  Utils.h
tests/: main.cpp
